[package]
name = "UQLRF-500"
version = "0.1.1"
authors = ["strikles <strikles@gmail.com>"]
description = "Karplus-Strong algorithm implementation."
repository = "https://github.com/strikles/UQLRF-500"
readme = "README.md"
keywords = ["karplus", "sound", "synthesis", "vst"]
license = "MIT"

[dependencies]
rand = "0.3.14"
vst = { git = "https://github.com/rust-dsp/rust-vst" }
noise = "0.6.0"
